do not user java 11 method for now; fixes #20231